--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="TBD" />
+    <meta
+      name="description"
+      content="Get Privacy using IBC and Secret Network"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Get Privacy</title>
@@ -10,7 +13,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Hind:300,400,500,700&display=swap"
     />
   </head>
   <body>
