--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Hind:300,400,500,700&display=swap"
     />
+    <link rel="prefetch" href="https://SCRT.network" />
   </head>
   <body>
     <div id="root"></div>
