--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO -->
+    <meta name="application-name" content="Get Privacy" />
     <meta
       name="description"
       content="Get Privacy using IBC and Secret Network"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" property="og:title" content="Get Privacy" />
+    <meta name="twitter:site" content="@SecretNetwork" />
+    <meta name="twitter:creator" content="@SecretNetwork" />
+    <meta
+      name="twitter:image"
+      property="og:image"
+      content="https://wrap.scrt.network/socials.webp"
+    />
+    <meta
+      name="twitter:description"
+      property="og:description"
+      content="Get Privacy using IBC and Secret Network"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Get Privacy" />
+    <meta property="og:url" content="https://wrap.scrt.network" />
+    <meta property="og:locale" content="en_US" />
 
     <title>Get Privacy</title>
 
