--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta
       name="twitter:image"
       property="og:image"
-      content="https://wrap.scrt.network/socials-preview.webp"
+      content="https://wrap.scrt.network/socials-preview.png"
     />
     <meta
       name="twitter:description"
