--- a/index.html
+++ b/index.html
@@ -4,34 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <title>Get Privacy</title>
+
     <!-- SEO -->
+    <!-- Title -->
     <meta name="application-name" content="Get Privacy" />
+    <meta name="title" content="Get Privacy" />
+    <meta name="twitter:title" content="Get Privacy" />
+    <meta property="og:title" content="Get Privacy" />
+    <meta name="og:title" content="Get Privacy" />
+
+    <!-- Description -->
     <meta
       name="description"
       content="Get Privacy using IBC and Secret Network"
     />
+    <meta
+      name="twitter:description"
+      content="Get Privacy using IBC and Secret Network"
+    />
+    <meta
+      property="og:description"
+      content="Get Privacy using IBC and Secret Network"
+    />
+    <meta
+      name="og:description"
+      content="Get Privacy using IBC and Secret Network"
+    />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" property="og:title" content="Get Privacy" />
-    <meta name="twitter:site" content="@SecretNetwork" />
-    <meta name="twitter:creator" content="@SecretNetwork" />
+    <!-- Image -->
     <meta
       name="twitter:image"
+      content="https://wrap.scrt.network/socials-preview.png"
+    />
+    <meta
       property="og:image"
       content="https://wrap.scrt.network/socials-preview.png"
     />
     <meta
-      name="twitter:description"
-      property="og:description"
-      content="Get Privacy using IBC and Secret Network"
+      name="og:image"
+      content="https://wrap.scrt.network/socials-preview.png"
     />
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@SecretNetwork" />
+    <meta name="twitter:creator" content="@SecretNetwork" />
+
+    <!-- Facebook/Telegram -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Get Privacy" />
     <meta property="og:url" content="https://wrap.scrt.network" />
     <meta property="og:locale" content="en_US" />
-
-    <title>Get Privacy</title>
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
