--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="prefetch" href="https://SCRT.network" />
   </head>
   <body>
+    <div style="text-align: center">Withdarwals UI is in the works.</div>
     <div id="root"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
