Fix injective deposit

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       // fix the keplr window type error when there are no node polyfills
       var global = global || window;
     </script>
+    <script type="module">
+      import { Buffer } from "buffer";
+      window.Buffer = Buffer;
+    </script>
     <script type="module" src="/src/App.tsx"></script>
   </body>
 </html>
