Start of UI overhaul

--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Get Privacy</title>
+    <title>Enable Privacy</title>
 
     <!-- SEO -->
     <!-- Title -->
-    <meta name="application-name" content="Get Privacy" />
-    <meta name="title" content="Get Privacy" />
-    <meta name="twitter:title" content="Get Privacy" />
-    <meta property="og:title" content="Get Privacy" />
+    <meta name="application-name" content="Enable Privacy" />
+    <meta name="title" content="Enable Privacy" />
+    <meta name="twitter:title" content="Enable Privacy" />
+    <meta property="og:title" content="Enable Privacy" />
 
     <!-- Description -->
     <meta
       name="description"
-      content="Get Privacy using IBC and Secret Network"
+      content="Enable Privacy using IBC and Secret Network"
     />
     <meta
       name="twitter:description"
-      content="Get Privacy using IBC and Secret Network"
+      content="Enable Privacy using IBC and Secret Network"
     />
     <meta
       property="og:description"
-      content="Get Privacy using IBC and Secret Network"
+      content="Enable Privacy using IBC and Secret Network"
     />
 
     <!-- Image -->
@@ -55,7 +55,7 @@
     />
     <link rel="prefetch" href="https://SCRT.network" />
   </head>
-  <body>
+  <body class="bg-black text-white">
     <div id="root"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
