--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Hind:300,400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=:300,400,500,700&display=swap"
     />
     <link rel="prefetch" href="https://SCRT.network" />
   </head>
