--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     />
     <link rel="prefetch" href="https://SCRT.network" />
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-zinc-900 text-white">
     <div id="root"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
