--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <!-- Image -->
     <meta
       name="twitter:image"
-      content="https://wrap.scrt.network/socials-preview.png"
+      content="socials-preview.png"
     />
     <meta
       property="og:image"
-      content="https://wrap.scrt.network/socials-preview.png"
+      content="socials-preview.png"
     />
 
     <!-- Twitter -->
