--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Enable Privacy</title>
+    <title>Secret Dashboard</title>
 
     <!-- SEO -->
     <!-- Title -->
-    <meta name="application-name" content="Enable Privacy" />
-    <meta name="title" content="Enable Privacy" />
-    <meta name="twitter:title" content="Enable Privacy" />
-    <meta property="og:title" content="Enable Privacy" />
+    <meta name="application-name" content="Secret Dashboard" />
+    <meta name="title" content="Secret Dashboard" />
+    <meta name="twitter:title" content="Secret Dashboard" />
+    <meta property="og:title" content="Secret Dashboard" />
 
     <!-- Description -->
     <meta
       name="description"
-      content="Enable Privacy using IBC and Secret Network"
+      content="Secret Dashboard using IBC and Secret Network"
     />
     <meta
       name="twitter:description"
-      content="Enable Privacy using IBC and Secret Network"
+      content="Secret Dashboard using IBC and Secret Network"
     />
     <meta
       property="og:description"
-      content="Enable Privacy using IBC and Secret Network"
+      content="Secret Dashboard using IBC and Secret Network"
     />
 
     <!-- Image -->
