--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Facebook/Telegram -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Get Privacy" />
+    <meta property="og:site_name" content="Secret Dashhboard" />
     <meta property="og:url" content="https://wrap.scrt.network" />
     <meta property="og:locale" content="en_US" />
 
@@ -55,7 +55,7 @@
     />
     <link rel="prefetch" href="https://SCRT.network" />
   </head>
-  <body class="bg-zinc-900 text-white">
+  <body>
     <div id="root"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
