added custom route-titles w/ helmet

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <!-- Description -->
     <meta
       name="description"
-      content="Secret Dashboard using IBC and Secret Network"
+      content="Secret Dashboard: An entry point for new users into Secret Network"
     />
     <meta
       name="twitter:description"
-      content="Secret Dashboard using IBC and Secret Network"
+      content="Secret Dashboard: An entry point for new users into Secret Network"
     />
     <meta
       property="og:description"
-      content="Secret Dashboard using IBC and Secret Network"
+      content="Secret Dashboard: An entry point for new users into Secret Network"
     />
 
     <!-- Image -->
