--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <link rel="prefetch" href="https://SCRT.network" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-neutral-100 dark:bg-neutral-900 text-black dark:text-white"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
       var global = global || window;
