removed prefetch for unused images

--- a/index.html
+++ b/index.html
@@ -43,184 +43,9 @@
     <meta property="og:locale" content="en_US" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="prefetch" href="https://SCRT.network" />
+    <link rel="prefetch" href="https://scrt.network" />
     <!-- WHIP-003 IBC icons -->
     <!-- sSCRT - Secret Secret -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/scrt.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1k0jntykt7e4g3y88ltc60czgjuqdy4c9e8fzek"
-    />
-
-    <!-- sAKT - Akash -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/akt.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret168j5f78magfce5r2j4etaytyuy7ftjkh4cndqw"
-    />
-
-    <!-- sATOM - Cosmos Hub -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/atom.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret14mzwd0ps5q277l20ly2q3aetqe3ev4m4260gf4"
-    />
-
-    <!-- sBLD - Agoric -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/bld.webp"
-      data-caip-19="cosmos:secret-4:snip20/secret1rw2l7z22s3ed6dl5v70ktvnckhurldy23a3a58"
-    />
-
-    <!-- sCRE - Crescent -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/cre.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1tatdlkyznf00m3a7hftw5daaq2nk38ugfphuyr"
-    />
-
-    <!-- sDVPN - Sentinel -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/dvpn.jpeg"
-      data-caip-19="cosmos:secret-4:snip20/secret1k8cge73c3nh32d4u0dsd5dgtmk63shtlrfscj5"
-    />
-
-    <!-- sEVMOS - Evmos -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/evmos.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret1grg9unv2ue8cf98t50ea45prce7gcrj2n232kq"
-    />
-
-    <!-- sGRAV - Gravity Bridge -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/grav.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1dtghxvrx35nznt8es3fwxrv4qh56tvxv22z79d"
-    />
-
-    <!-- sHUAHUA - Chihuahua -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/huahua.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret1ntvxnf5hzhzv8g87wn76ch6yswdujqlgmjh32w"
-    />
-
-    <!-- sINJ - Injective -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/inj.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret16cwf53um7hgdvepfp3jwdzvwkt5qe2f9vfkuwv"
-    />
-
-    <!-- sIST - Inter-stable token -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/ist.webp"
-      data-caip-19="cosmos:secret-4:snip20/secret1kjqktuq2wq6mk7l0ecvk2cwcskjmv3ghpklctn"
-    />
-
-    <!-- sJUNO - Juno -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/juno.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1smmc5k24lcn4j2j8f3w0yaeafga6wmzl0qct03"
-    />
-
-    <!-- sKUJI - Kujira -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/kuji-token.webp"
-      data-caip-19="cosmos:secret-4:snip20/secret1gaew7k9tv4hlx2f4wq4ta4utggj4ywpkjysqe8"
-    />
-
-    <!-- sLUNA - Terra -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/luna2.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1w8d0ntrhrys4yzcfxnwprts7gfg5gfw86ccdpf"
-    />
-
-    <!-- sOSMO - Osmosis -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/osmo.jpeg"
-      data-caip-19="cosmos:secret-4:snip20/secret1zwwealwm0pcl9cul4nt6f38dsy6vzplw8lp3qg"
-    />
-
-    <!-- sROWAN - Sifchain -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/rowan.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret159p22zvq2wzsdtqhm2plp4wg33srxp2hf0qudc"
-    />
-
-    <!-- WHIP-003 SNIP20 icons -->
-    <!-- ALTER - Alter -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/alter.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret12rcvz0umvk875kd6a803txhtlu7y0pnd73kcej"
-    />
-
-    <!-- AMBER - Amber -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/amber.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret1s09x2xvfd2lp2skgzm29w2xtena7s8fq98v852"
-    />
-
-    <!-- BUTT - Button -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/butt.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1yxcexylwyxlq58umhgsjgstgcg2a0ytfy4d9lt"
-    />
-
-    <!-- SHD - Shade -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/shd.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret1qfql357amn448duf5gvp9gr48sxx9tsnhupu3d"
-    />
-
-    <!-- SIENNA - Sienna -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/sienna.jpg"
-      data-caip-19="cosmos:secret-4:snip20/secret1rgm2m5t530tdzyd99775n6vzumxa5luxcllml4"
-    />
-
-    <!-- stkd-SCRT - Staked SCRT Derivative (Shade) -->
-    <link
-      rel="prefetch"
-      as="image"
-      href="/stkd-scrt.svg"
-      data-caip-19="cosmos:secret-4:snip20/secret1k6u0cy4feepm6pehnz804zmwakuwdapm69tuc4"
-    />
 
     <!-- WHIP-003 definitions -->
     <script type="application/toml" data-whip-003>
