Fix writing error

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Facebook/Telegram -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Secret Dashhboard" />
+    <meta property="og:site_name" content="Secret Dashboard" />
     <meta property="og:url" content="https://wrap.scrt.network" />
     <meta property="og:locale" content="en_US" />
 
