Add Secret Surge message

--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <div
+      style="
+        background-color: #ec8345;
+        color: white;
+        padding: 30px;
+        text-align: center;
+      "
+    >
+      ⚡️ <b>Secret Surge is LIVE!</b> bringing <b>$4 MILLION</b> in rewards to
+      Secret DeFi dApps!
+      <a
+        href="https://scrt.network/blog/secret-surge"
+        style="color: white; text-decoration: none"
+        ><u>Learn More</u></a
+      >
+      ⚡️
+    </div>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
