Update Secret Surge Banner

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         text-align: center;
       "
     >
-      ⚡️ <b>Secret Surge is LIVE!</b> bringing <b>$4 MILLION</b> in rewards to
-      Secret DeFi dApps!
+      ⚡️ <b>Secret Surge is LIVE,</b> bringing up to <b>$4 MILLION</b> in
+      rewards to Secret DeFi dApps!
       <a
         href="https://scrt.network/blog/secret-surge"
         style="color: white; text-decoration: none"
