refactored for the better

--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <div
-      style="
-        background-color: #ec8345;
-        color: white;
-        padding: 30px;
-        text-align: center;
-      "
-    >
-      ⚡️ <b>Secret Surge is LIVE,</b> bringing up to <b>$4 MILLION</b> in
-      rewards to Secret DeFi dApps!
-      <a
-        href="https://scrt.network/blog/secret-surge"
-        style="color: white; text-decoration: none"
-        ><u>Learn More</u></a
-      >
-      ⚡️
-    </div>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -33,15 +16,15 @@
     <!-- Description -->
     <meta
       name="description"
-      content="Secret Dashboard: An entry point for new users into Secret Network"
+      content="Secret Dashboard is an entry point for new users into Secret Network."
     />
     <meta
       name="twitter:description"
-      content="Secret Dashboard: An entry point for new users into Secret Network"
+      content="Secret Dashboard is an entry point for new users into Secret Network."
     />
     <meta
       property="og:description"
-      content="Secret Dashboard: An entry point for new users into Secret Network"
+      content="Secret Dashboard is an entry point for new users into Secret Network."
     />
 
     <!-- Image -->
