--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     />
 
     <!-- Image -->
-    <meta name="twitter:image" content="socials-preview.png" />
-    <meta property="og:image" content="socials-preview.png" />
+    <meta name="twitter:image" content="secret_dashboard_logo.svg" />
+    <meta property="og:image" content="secret_dashboard_logo.svg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -39,7 +39,7 @@
     <!-- Facebook/Telegram -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Secret Dashboard" />
-    <meta property="og:url" content="https://wrap.scrt.network" />
+    <meta property="og:url" content="https://dash.scrt.network" />
     <meta property="og:locale" content="en_US" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
