use Black dashboard logo

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
     />
 
     <!-- Image -->
-    <meta name="twitter:image" content="secret_dashboard_logo.svg" />
-    <meta property="og:image" content="secret_dashboard_logo.svg" />
+    <meta
+      name="twitter:image"
+      content="https://dash.scrt.network/img/secret_dashboard_logo_black.svg"
+    />
+    <meta
+      property="og:image"
+      content="https://dash.scrt.network/img/secret_dashboard_logo_black.svg"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
