--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <!-- Image -->
     <meta
       name="twitter:image"
-      content="https://dash.scrt.network/img/secret_dashboard_logo_black.svg"
+      content="https://dash.scrt.network/img/secret_dashboard_preview.png"
     />
     <meta
       property="og:image"
-      content="https://dash.scrt.network/img/secret_dashboard_logo_black.svg"
+      content="https://dash.scrt.network/img/secret_dashboard_preview.png"
     />
 
     <!-- Twitter -->
