added tons SEO improvements

--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Secret Dashboard</title>
-
-    <!-- SEO -->
-    <!-- Title -->
-    <meta name="application-name" content="Secret Dashboard" />
-    <meta name="title" content="Secret Dashboard" />
-    <meta name="twitter:title" content="Secret Dashboard" />
-    <meta property="og:title" content="Secret Dashboard" />
-
-    <!-- Description -->
-    <meta
-      name="description"
-      content="Secret Dashboard is an entry point for new users into Secret Network."
-    />
-    <meta
-      name="twitter:description"
-      content="Secret Dashboard is an entry point for new users into Secret Network."
-    />
-    <meta
-      property="og:description"
-      content="Secret Dashboard is an entry point for new users into Secret Network."
-    />
-
-    <!-- Image -->
-    <meta
-      name="twitter:image"
-      content="https://dash.scrt.network/img/secret_dashboard_preview.png"
-    />
-    <meta
-      property="og:image"
-      content="https://dash.scrt.network/img/secret_dashboard_preview.png"
-    />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@SecretNetwork" />
-    <meta name="twitter:creator" content="@SecretNetwork" />
-
-    <!-- Facebook/Telegram -->
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Secret Dashboard" />
-    <meta property="og:url" content="https://dash.scrt.network" />
-    <meta property="og:locale" content="en_US" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="prefetch" href="https://scrt.network" />
 
     <!-- WHIP-003 definitions -->
-    <link rel="prefetch" as="fetch" href="/whip-003.json" data-whip-003 />
+    <!-- <link rel="prefetch" as="fetch" href="/whip-003.json" data-whip-003 /> -->
   </head>
   <body>
     <div
