First working version of Terra ampLUNA
painful

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       // fix the keplr window type error when there are no node polyfills
       var global = global || window
     </script>
+    <script crossorigin src="https://unpkg.com/@terra-money/terra.js/dist/bundle.js"></script>
     <script type="module">
       import { Buffer } from 'buffer'
       window.Buffer = Buffer
