--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="prefetch" as="fetch" href="/whip-003.json" data-whip-003 /> -->
   </head>
   <body>
-    <div id="root" class="bg-slate-100 dark:bg-neutral-900 text-black dark:text-white"></div>
+    <div id="root" class="bg-[#feebda] dark:bg-neutral-900 text-black dark:text-white"></div>
     <script>
       // fix the keplr window type error when there are no node polyfills
       var global = global || window
